[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content-moderation-env"
version = "1.0.0"
description = "A realistic content moderation environment built for OpenEnv"
authors = [
    { name = "sunaynaik345" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=2.7.2",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"

[project.optional-dependencies]
dev = [
    "pytest",
]
